# factehr

./: .gitignore  README.md  pyproject.toml
docs/: compute.md  dataset_summary.md  experiments.md  nlp_benchmarks.md  release_files.md  runtimes_and_costs.md
legacy/: check_status.py  generate_results.R  rag sandbox.ipynb
legacy/archive/: inference.py  inference_auto.py  launch_entailment_jobs_loop.sh  main_mixtral.py  mixtral.py  prompts.py  test.py  trial.sh  vllms.py
legacy/data/: coral.py  cxr.py  data_edit.py  ft_data.py  medalign.py  medalign_ak.py  mimic_ak.py  note_splitter.py  postprocess.py  precision_data.py  radgraph.py  radgraph_cxr.py  radgraph_train.py  recall_data.py  sbd.py  tokenizer.py
legacy/entailment/: analysis.py  calculate_results.py  entailment_annotation.py  entailment_batching.py  file_check.py  mednli.py  utils.py
legacy/finetune/: eval.py  finetuning.py  run_ehr_tune_eval.sh  run_ehr_tune_eval_2.sh  tune_eval.py
legacy/main/: gpt4.py  llama3.py  (+5 more)
scripts/: build_docbin_dataset.py  build_fact_decomp_prompted_dataset.py  build_nli_prompted_datasets.py  build_prompt_templates.py  combine_notes.py  downsample_jsonl.sh  get_entailment_pairs.py  get_sentence_splits.py  init_all_datasets.sh  init_nli_datasets.sh  merge_fact_decomps.py  openai_inference_config.json  run_azure_openai_fact_decomp_jobs.sh  run_openai_client.sh  run_transformers_client.sh  sample_for_annotation.py  sample_source_datasets.py  score_entailment_pairs.py  test_transformers.py  transformers_inference_config.json
tests/: test_entailment.py  test_split_facts.py
(+81 files in other folders)
